# solve-it-mcp

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .yamllint.yml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  COMMIT_SUMMARY.md  CONTRIBUTING.md  DOCKER_TEST_RESULTS.md  Dockerfile  Dockerfile.debian-bookworm-backup  Dockerfile.dev  Dockerfile.live  Dockerfile.release  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTIARCH_TESTING.md  Makefile  NOTICE  QUICK_TEST_REFERENCE.md  README.md  README_IMPLEMENTATION.md  REPOSITORY_1_SUMMARY.md  SECURITY.md  docker-compose.dev.yml  docker-compose.live.yml  docker-compose.yml  docker-entrypoint-live.sh  index.html  mkdocs.yml  pyproject.toml  quick-test-multiarch.sh  requirements-dev.txt  requirements.txt  sitemap.xml  (+1 more)
.github/: NOTICE_AUTOMATION_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  secret_scanning.yml
.github/workflows/: README.md  ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-review.yml  dependency-test.yml  docker-latest.yml  docker-live.yml  docker-monthly.yml  docker-pr-validation.yml  docker-publish-live.yml  docker-publish.yml  docker-release.yml  docker-weekly.yml  docs.yml  gate.yml  license-compliance.yml  reusable-docker-sign.yml  reusable-python-lint.yml  reusable-python-test.yml  scorecard.yml  security-monitor.yml  security.yml  zenodo-publish.yml
.github/workflows/backup/: ci.yml  docker-publish.yml
architecture/implementation/: index.html
architecture/overview/: index.html
architecture/security-model/: index.html
deployment/docker/: index.html
deployment/kubernetes/: index.html
development/branch-protection/: index.html
development/local-testing/: index.html
development/multiarch-testing/: index.html
development/releases/: index.html
development/testing-guide/: index.html
docker/: entrypoint-live.sh
docs/: BRANCH_PROTECTION.md  DOCKER.md  KUBERNETES.md  LOCAL_TESTING.md  RELEASES.md  SERVER_INTEGRATION.md  getting-started.md  index.md
docs/architecture/: implementation.md  overview.md  security-model.md
docs/deployment/: docker.md  kubernetes.md
docs/development/: branch-protection.md  local-testing.md  multiarch-testing.md  releases.md  testing-guide.md
docs/guides/: for-forensic-analysts.md  for-researchers.md  integration.md  troubleshooting.md
docs/reference/: environment-variables.md  tools-overview.md
docs/transports/: http.md
examples/docker/: run-http.sh  run-stdio.sh
examples/k8s/: README.md  deployment-simple.yaml
getting-started/: index.html
guides/for-forensic-analysts/: index.html
guides/for-researchers/: index.html
guides/integration/: index.html
guides/troubleshooting/: index.html
reference/environment-variables/: index.html
reference/tools-overview/: index.html
scripts/: build-and-push.sh  cleanup.sh  fetch_solveit_data.py  pre-push-check.sh
search/: search_index.json
src/: config.py  server.py
src/tools/: base.py  solveit_base.py  solveit_tools.py
src/transports/: __init__.py  http_transport.py  http_transport_sdk.py  stdio_transport.py
src/utils/: __init__.py  correlation.py  data_path.py  knowledge_base_manager.py  logging.py  metrics.py  security.py  security_middleware.py  shared_security.py  telemetry.py
tests/: conftest.py  test_http_transport_sdk.py  test_mcp_client_http.py
tests/integration/: test_http_mcp.sh  test_http_transport.py  test_real_library_integration.py  test_server_integration.py  test_stdio_transport.py  test_telemetry.py
tests/unit/: conftest.py  test_data_path.py  test_server.py  test_solveit_base.py
tests/unit/test_tools/: test_bulk_tools.py  test_new_tools.py  test_objective_tools.py  test_parameter_validation.py  test_query_tools.py  test_relationship_tools.py
transports/http/: index.html
