[project]
name = "solveit-mcp-server"
version = "0.2025.10.0.1.0"
description = "Production-ready MCP server providing LLM access to the SOLVE-IT Digital Forensics Knowledge Base"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "3soos3"}]
keywords = ["digital-forensics", "mcp-server", "model-context-protocol", "solve-it", "llm", "forensic-investigation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    # Core MCP dependencies
    "mcp>=1.0.0",
    "pydantic>=2.0,<3.0",
    "anyio>=4.0,<5.0",
    "aiofiles>=23.0",
    "httpx>=0.25,<1.0",
    # HTTP/ASGI server
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.27.0",
    # OpenTelemetry
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation>=0.42b0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.21.0",
    "opentelemetry-instrumentation-asyncio>=0.42b0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
    "opentelemetry-instrumentation-logging>=0.42b0",
    "opentelemetry-instrumentation-starlette>=0.42b0",
    # Resource monitoring
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/3soos3/solve-it-mcp"
Documentation = "https://github.com/3soos3/solve-it-mcp/blob/main/README.md"
Repository = "https://github.com/3soos3/solve-it-mcp"
"Bug Tracker" = "https://github.com/3soos3/solve-it-mcp/issues"
"Security" = "https://github.com/3soos3/solve-it-mcp/security"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
solveit-mcp-server = "server:main"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (common in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
